--- a/package.json
+++ b/package.json
@@ -4,5 +4,11 @@
   "description": "Uma prova",
   "main": "index.js",
   "author": "adrianocruzweb <adrianocruzweb@hotmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "jest": "^26.6.3"
+  },
+  "scripts": {
+    "test": "jest"
+  }
 }
